--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/horizon": "^5.24",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-activitylog": "^4.8"
     },
     "require-dev": {
